python/testData/quickFixes/PyTypeHintsQuickFixTest/oneElementListAsTypingMemberParameter.py
from typing import List

foo3: List[<error descr="Parameters to generic types must be types">[in<caret>t]</error>]